test/mlir/slice_bad_case_2.mlir.stderr
test/mlir/slice_bad_case_2.mlir:5:8: error: 'colgm.slice' op index must be of type index or tensor<i32/i64>, got 'i64'
  %0 = colgm.slice %arg, %idx {axis = 0} : tensor<3x4xf32>, i64 -> tensor<4xf32>
       ^
test/mlir/slice_bad_case_2.mlir:5:8: note: see current operation: %0 = "colgm.slice"(%arg0, %arg1) {axis = 0 : i64} : (tensor<3x4xf32>, i64) -> tensor<4xf32>
